--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Web site created using create-react-app" />
+		<meta name="description" content="A community for traders" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 		<title>Stoff Capital</title>
